# video_view

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/video_view/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  video_view.cpp
app/src/main/cpp/fftools/: ffmpeg.d  ffprobe.d
app/src/main/cpp/lib/arm64-v8a/pkgconfig/: libavcodec.pc  libavfilter.pc  libavutil.pc  libpostproc.pc  libswresample.pc
app/src/main/cpp/lib/x86_64/: libx264.so.164
app/src/main/java/com/example/: FFmpegUtil.kt
app/src/main/java/com/example/video_view/: ExoPlayerUtil.kt  FileUtil.kt  MainActivity.kt  VideoProcessingActivity.kt
app/src/main/res/layout/: activity_main.xml  activity_video_processing.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/video_view/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
video_view_material/output_aarch64/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavformat.pc  libswscale.pc
video_view_material/output_aarch64/share/doc/ffmpeg/: ffmpeg-all.html  ffmpeg-bitstream-filters.html  ffmpeg-codecs.html  ffmpeg-devices.html  ffmpeg-filters.html  ffmpeg-protocols.html  ffmpeg-scaler.html  ffmpeg-utils.html  ffmpeg.html  ffprobe.html  libavcodec.html  libavdevice.html  libavfilter.html  libavutil.html  nut.html
video_view_material/output_aarch64/share/man/man1/: ffmpeg-all.1  ffmpeg-codecs.1  ffmpeg-filters.1  ffmpeg-formats.1  ffprobe-all.1
video_view_material/output_x264/aarch64/lib/pkgconfig/: x264.pc
video_view_material/output_x264/x86_64/lib/pkgconfig/: x264.pc
video_view_material/output_x86_64/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
video_view_material/output_x86_64/share/doc/ffmpeg/: developer.html  faq.html  fate.html  ffmpeg-formats.html  ffmpeg-resampler.html  ffprobe-all.html  general.html  git-howto.html  libavformat.html  libswresample.html  libswscale.html  mailing-list-faq.html  platform.html
video_view_material/output_x86_64/share/man/man1/: ffmpeg-protocols.1  ffmpeg.1
